--- a/data-grid.scss
+++ b/data-grid.scss
@@ -82,11 +82,6 @@ data-grid {
         top: -9999px;
         left: -9999px;
       }
-      tfoot {
-        .dg-meta {
-          display: none;
-        }
-      }
       tbody {
         tr {
           padding: 0;
@@ -307,7 +302,6 @@ data-grid {
     }
     .dg-goto-page {
       width: 4rem;
-      margin: 0 0.5rem;
     }
     .dg-footer {
       display: flex;
@@ -387,6 +381,14 @@ data-grid {
     }
     tfoot .dg-meta {
       text-align: left;
+    }
+  }
+
+  @media only screen and (max-width: 768px) {
+    tfoot {
+      .dg-meta {
+        display: none;
+      }
     }
   }
 }
