--- a/data-grid.css
+++ b/data-grid.css
@@ -46,11 +46,11 @@ data-grid table {
   width: 100%;
   white-space: normal;
 }
-data-grid[scrollable] table {
-  display: inline-block;
-  max-width: 100%;
+data-grid[scrollable] {
   overflow-x: auto;
-  white-space: nowrap;
+}
+data-grid[scrollable] table {
+  width: auto;
 }
 data-grid[expand] table tbody td:hover {
   overflow: visible;
@@ -174,6 +174,7 @@ data-grid th {
 }
 data-grid th,
 data-grid td {
+  position: relative;
   overflow: hidden;
   text-align: left;
   text-overflow: ellipsis;
@@ -332,6 +333,16 @@ data-grid[dir=rtl] [aria-sort=descending]:after {
 }
 data-grid[dir=rtl] tfoot .dg-meta {
   text-align: left;
+}
+data-grid .dg-resizer {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 0.5rem;
+  cursor: col-resize;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 @media only screen and (max-width: 768px) {
   data-grid tfoot .dg-meta {
