--- a/data-grid.css
+++ b/data-grid.css
@@ -60,6 +60,7 @@ data-grid td[tabindex] {
   word-break: normal;
 }
 data-grid th {
+  position: relative;
   font-weight: bold;
   padding: calc(var(--padding) * var(--header-scale)) var(--padding);
 }
@@ -291,7 +292,6 @@ data-grid tfoot .dg-meta {
 }
 data-grid [aria-sort] {
   cursor: pointer;
-  position: relative;
   padding-right: 1.5rem;
 }
 data-grid [aria-sort=none]:after,
@@ -347,10 +347,12 @@ data-grid[dir=rtl] tfoot .dg-meta {
 data-grid .dg-menu {
   position: absolute;
   z-index: 3;
-  background: var(--header-background);
+  background: var(--white);
   list-style: none;
   margin: 0;
   padding: var(--padding);
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
+  border-radius: var(--border-radius);
 }
 data-grid .dg-menu li {
   margin: 0;
@@ -359,6 +361,10 @@ data-grid .dg-menu li {
 data-grid .dg-menu label {
   display: flex;
   align-items: center;
+}
+data-grid .dg-menu input {
+  margin-right: 0.5em;
+  box-shadow: none;
 }
 data-grid .dg-resizer {
   position: absolute;
