--- a/data-grid.scss
+++ b/data-grid.scss
@@ -85,7 +85,7 @@ data-grid {
   // Expand truncated cells on hover
   &[expand] {
     table tbody td {
-      &:hover {
+      &:not(.dg-selectable):hover {
         overflow: visible;
         z-index: 1;
         white-space: nowrap;
@@ -239,7 +239,10 @@ data-grid {
       background-color: #f9f9f9;
     }
   }
-  input,
+  input[type="checkbox"] {
+    margin: 0;
+  }
+  input:not([type="checkbox"]),
   select {
     background-color: #fff;
     box-sizing: border-box;
@@ -249,7 +252,7 @@ data-grid {
     margin: 0 0.2rem;
     padding: 0 var(--padding);
   }
-  input,
+  input:not([type="checkbox"]),
   select,
   button {
     &:focus {
@@ -429,10 +432,26 @@ data-grid {
     label {
       display: flex;
       align-items: center;
+      margin-bottom: 0.25em;
     }
     input {
       margin-right: 0.5em;
-      box-shadow: none;
+    }
+  }
+
+  .dg-selectable {
+    position: relative;
+    label {
+      margin: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
   }
 
