--- a/data-grid.scss
+++ b/data-grid.scss
@@ -291,6 +291,19 @@ data-grid {
       }
     }
   }
+  tbody td {
+    input.dg-editable {
+      width: 100%;
+      background: transparent;
+      border: 0;
+      border-radius: 0;
+      margin: 0;
+
+      &:hover {
+        box-shadow: 0 0 0 var(--padding-half) rgba(var(--color-rgb), 0.25);
+      }
+    }
+  }
 
   // Empty plate (don't use :empty as it would create fouc on load)
   &:not([url]) tbody {
