--- a/data-grid.scss
+++ b/data-grid.scss
@@ -84,9 +84,10 @@ data-grid {
     white-space: nowrap;
   }
 
-  // Expand on multiple lines
-  &[expand] {
-    table tbody tr {
+  // Expand on multiple lines on row click
+  table tbody tr {
+    cursor: pointer;
+    &.dg-expanded {
       td {
         white-space: normal;
       }
@@ -433,6 +434,7 @@ data-grid {
     z-index: 3;
     background: var(--white);
     list-style: none;
+    max-width: 150px;
     margin: 0;
     padding: var(--padding);
     box-shadow: 0 0 1rem rgba(0, 0, 0, 0.25);
