add a fake row to deal with fixed height

--- a/data-grid.css
+++ b/data-grid.css
@@ -46,6 +46,7 @@ data-grid table {
   border-collapse: collapse;
   table-layout: fixed;
   width: 100%;
+  max-width: 100%;
   white-space: normal;
 }
 data-grid th,
